@@ -467,7 +467,9 @@ CLOAK("mummy wrapping", None,
       1, 0,          0,  0, 0,  3,  2, 10, 1,  CLOTH, CLR_GRAY),
         /* worn mummy wrapping blocks invisibility */
 CLOAK("elven cloak", "faded pall",
-      0, 1,    STEALTH,  8, 0, 10, 60,  9, 1,  CLOTH, CLR_BLACK),
+      0, 1,    STEALTH,  4, 0, 10, 60,  9, 1,  CLOTH, CLR_BLACK),
+CLOAK("second skin", "fleshy wrap",
+      0, 1,    REGENERATION,  4, 0, 10, 60,  10, 1, FLESH, CLR_RED),
 CLOAK("orcish cloak", "coarse mantelet",
       0, 0,          0,  4, 0, 10, 40, 10, 1,  CLOTH, CLR_BLACK),
 CLOAK("flowing dress", None,
@@ -499,8 +501,10 @@ CLOAK("cloak of flight", "feathery cloak",
 CLOAK("cloak of magic resistance", "ornamental cope",
       0, 1,  ANTIMAGIC,  2, 0, 10, 60,  9, 1,  CLOTH, CLR_WHITE),
         /*  'cope' is not a spelling mistake... leave it be */
+CLOAK("cloak of reflection", "ostentatious cape",
+      0, 1, REFLECTING, 2, 0, 10, 60,  10, 1,  CLOTH, CLR_RED),
 CLOAK("cloak of displacement", "piece of cloth",
-      0, 1,  DISPLACED, 10, 0, 10, 50,  9, 1,  CLOTH, HI_CLOTH),
+      0, 1,  DISPLACED, 8, 0, 10, 50,  9, 1,  CLOTH, HI_CLOTH),
 
 /* shields */
 SHIELD("small shield", None,
@@ -508,7 +512,7 @@ SHIELD("small shield", None,
 SHIELD("elven shield", "blue and green shield",
        0, 0, 0,          0, 2, 0,  40,  7, 8, 0,  WOOD, CLR_GREEN),
 SHIELD("tower shield", None,
-      1, 0, 1,          0, 2, 0, 200, 20, 7, 0,  IRON, HI_METAL),
+       1, 0, 1,          0, 2, 0, 200, 20, 7, 0,  IRON, HI_METAL),
 SHIELD("Uruk-hai shield", "white-handed shield",
        0, 0, 0,          0, 2, 0,  50,  7, 9, 0,  IRON, HI_METAL),
 SHIELD("orcish shield", "red-eyed shield",
