@@ -183,6 +183,7 @@ New Items
 - Snappy Tuxedo
 - Iron Mantle
 - Cloak of Flight
+- Cloak of Reflection
 - Tower Shield
 - Hide Shield
 - Rogues Gloves
